istio/6-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation, label on gateway pod
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: keyforthbank-webapp
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: keyforthbank-webapp-service.default.svc.cluster.local
            subset: original
          weight: 90
        - destination:
            host: keyforthbank-webapp-service.default.svc.cluster.local
            subset: original
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: keyforthbank-webapp
  namespace: default
spec:
  host: keyforthbank-webapp-service.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: original
      name: original
